[package]
name = "cargo-yeet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Yeet rust target directories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo"] }
fs_extra = "1"
